--- a/bootstrap_project/xpider_landing_page/css/style.css
+++ b/bootstrap_project/xpider_landing_page/css/style.css
@@ -107,31 +107,31 @@ button {
 }
 
 .fontSize17px {
-    font-size: 17px;
+    font-size: 1.063rem;
 }
 
-.fontSize16px {
-    font-size: 16px;
-}
+/* .fontSize16px {
+    font-size: 1rem;
+} */
 
 .fontSize18px {
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .fontSize14px {
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 
 .fontSize34px {
-    font-size: 34px;
+    font-size: 2.125rem;
 }
 
 .fontSize21px {
-    font-size: 21px;
+    font-size: 1.313rem;
 }
 
 .fontSize28px {
-    font-size: 28px;
+    font-size: 1.75rem;
 }
 
 .drop-down-nav-icon {
