--- a/bootstrap_project/xpider_landing_page/css/style.css
+++ b/bootstrap_project/xpider_landing_page/css/style.css
@@ -917,7 +917,8 @@ a:hover {
     padding: 1.375rem 2.375rem;
     border-radius: 0.3125rem;
     line-height: 1.1875rem;
-    margin-right: 1.5rem;
+    margin-right: 0 !important;
+    background-color: white;
 }
 
 .btn-bg-white {
