--- a/kanban-project/css/style.css
+++ b/kanban-project/css/style.css
@@ -84,7 +84,7 @@ main {
     box-shadow: 0px 0px 10px #D2D7E0;
     border-radius: 5px;
     height: fit-content;
-    max-height: 600px;
+    max-height: 650px;
 }
 
 /* .card:first-child {
@@ -138,8 +138,6 @@ main {
 }
 
 .card-content-wrapper .square {
-    width: 26px;
-    height: 26px;
     border-radius: 5px;
     background-color: #403EAE;
     display: flex;
@@ -149,6 +147,7 @@ main {
 
 .card-content-wrapper .number {
     color: white;
+    padding: 3px 8px;
 }
 
 .task-wrapper {
@@ -206,7 +205,7 @@ main {
     border: 2px dashed rgba(49, 49, 92, 0.5);
     /* height: 30px; */
     border-radius: 3px;
-    margin-top: 20px;
+    margin-top: 10px;
     display: flex;
     align-items: center;
     padding: 5px;
@@ -228,4 +227,57 @@ main {
     border-radius: 5px;
     height: 150px;
     margin-bottom: 10px;
+}
+
+.add-new-task-box,
+.new-task-content {
+    width: 100%;
+    border: 0;
+    border-radius: 5px;
+    height: auto;
+    outline: none;
+}
+
+.add-new-task-box {
+    height: auto;
+}
+
+.new-task-content {
+    padding: 10px;
+    font-size: 1rem;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    resize: none;
+    margin-bottom: 10px;
+}
+
+.add-new-task-box .btn {
+    display: flex;
+    align-items: center;
+}
+
+.add-new-task-btn {
+    border: 0;
+    padding: 5px 10px;
+    border-radius: 3px;
+    background-color: #4d943a;
+    font-size: 1rem;
+    color: white;
+    cursor: pointer;
+    outline: none;
+    margin-right: 20px;
+}
+
+.add-new-task-btn:hover {
+    background-color: #5aac44;
+}
+
+.add-new-task-box .btn i {
+    font-size: 1.5rem;
+    color: #707090;
+    cursor: pointer;
+}
+
+.add-new-task-box .btn i:hover {
+    color: #83839f;
 }
