update orange line in price, hover effect buttons

--- a/cut_html_css_exercise/css/style.css
+++ b/cut_html_css_exercise/css/style.css
@@ -136,7 +136,7 @@ button {
 }
 
 .cta-btn:hover {
-    transform: translateY(-5px);
+    transform: scale(1.1);
 }
 
 .navbar-light .navbar-toggler {
@@ -321,6 +321,7 @@ button {
 
 .price .participant-box {
     margin-top: 283px;
+    z-index: auto;
 }
 
 .team-circle {
@@ -479,6 +480,15 @@ button {
         padding-top: 70px;
     }
 
+    .participant-box::before {
+        content: url(../image/line3.png);
+        position: absolute;
+        top: -77px !important;
+        left: -10px !important;
+        transform: rotate(-11deg) !important;
+        z-index: -1;
+    }
+
 }
 
 @media (max-width: 576px) {
@@ -501,5 +511,30 @@ button {
 @media (width: 768px) {
     .learning {
         font-size: 0.68rem;
+    }
+}
+
+.participant-box::before {
+    content: url(../image/line3.png);
+    position: absolute;
+    top: -111px;
+    left: -26px;
+    transform: rotate(-9deg);
+}
+
+@media (max-width: 1024px) {
+    .participant-box::before {
+        content: url(../image/line3.png);
+        position: absolute;
+        top: -108px;
+        left: -18px;
+        transform: rotate(-11deg);
+        z-index: -1;
+    }
+}
+
+@media (max-width: 767px) {
+    .participant-box::before {
+        content: none;
     }
 }
