--- a/kanban-project/css/style.css
+++ b/kanban-project/css/style.css
@@ -138,7 +138,7 @@ main {
     align-items: center;
     margin-bottom: 16px;
     word-break: break-all;
-    align-items: end;
+    align-items: baseline;
 }
 
 .card-content-wrapper .title {
@@ -146,6 +146,18 @@ main {
     font-size: 1.25rem;
     text-transform: uppercase;
     margin: 0 10px 0 4px;
+    resize: none;
+    outline: none;
+    border-radius: 5px;
+    border: 2px solid transparent;
+    padding: 5px;
+    /* min-height: 2.125rem; */
+    overflow: hidden;
+}
+
+.card-content-wrapper .title:focus {
+    background-color: #FFF;
+    border: 2px solid #403eae;
 }
 
 .card-content-wrapper .square {
@@ -243,8 +255,13 @@ main {
     background-image: url(../image/hatch-bg.png);
     border: 1px solid #DBDCE3;
     border-radius: 5px;
-    height: 150px;
     margin-bottom: 10px;
+}
+
+.list-hatch {
+    background-image: url(../image/hatch-bg.png);
+    border: 1px solid #DBDCE3;
+    border-radius: 5px;
 }
 
 .add-new-task-box,
@@ -340,7 +357,8 @@ main {
     transform: rotate(5deg)
 }
 
-#edit-task-modal {
+#edit-task-modal,
+#delete-task-modal {
     max-width: 500px;
 }
 
