--- a/express-example/views/users/index.pug
+++ b/express-example/views/users/index.pug
@@ -1,17 +1,24 @@
-h1 Users
-a(href="/users/create", title="title") Create New User 
-form(action="users/search" method="GET")
-    if q
-        input(type="text" placeholder="Searching" id="search-input" name="q" value=`${q}`)
-    else
-        input(type="text" placeholder="Searching" id="search-input" name="q")
-    button Search
-ul
-each user in users
-    li
-        span= user.name
-        span &nbsp;
-        a(href=`/users/${user.id}`) View
+extends ../../layouts/common
 
-if !existedName && q
-    p Not found
+block content
+    h1 Users
+    a(href="/users/create", title="title") Create New User 
+    form(action="users/search" method="GET")
+        if q
+            input(type="text" placeholder="Searching" id="search-input" name="q" value=`${q}`)
+        else
+            input(type="text" placeholder="Searching" id="search-input" name="q")
+        button Search
+    ul
+    each user in users
+        li
+            span= user.name
+            span &nbsp;
+            a(href=`/users/${user.id}`) View
+
+    if !existedName && q
+        p Not found
+block footer
+    script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
+    script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
